--- a/public/stylesheets/sass/components/partials/_variables.scss
+++ b/public/stylesheets/sass/components/partials/_variables.scss
@@ -3,12 +3,24 @@
 $color-1: #2F4550; 
 $color-2: #B8DBD9; 
 $color-3: #FFFFFF; 
-$color-4: #F4F4F9; 
+$nav-blue: #424858;
+$bg: #252831; 
+$text-reg: #BeBeBe;
+
+// neon colors
+$blue: #21A7DA;
+$green: #2CBE8D;
+$red: #E64759;
+$purple: #9F85FF;
+$yellow: #E4D836;
+$orange: #ff6600;
+$pink: #c7254e;
+
 
 // fonts 
 
 $primary-font: 'Hind', sans-serif;
-$secondary-font: 'David Libre', serif;
+$secondary-font: 'Hind', sans-serif;
 
 // header size
 
