--- a/public/stylesheets/sass/main.scss
+++ b/public/stylesheets/sass/main.scss
@@ -12,7 +12,8 @@
 // Utils: Utilidades, archivos de ayuda, mixins, helpers, variables
 // -----------------------------------------------------------------------------
 
-@import 'components/navbar';
+@import 'components/layout';
+@import 'components/modals';
 
 
 
